welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:2: error: Missing closing brace `}' assumed here
override def run() {
^MethodsPicture:2: error: expected start of definition
override def run() {
         ^MethodsPicture:3: error: Missing closing brace `}' assumed here
def faireV() {
^