welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def faireV() {
avance()
baisseBrosse()
leveBrosse()
avance(); gauche(); avance()
baisseBrosse()
leveBrosse()
droite(); avance(); droite(); avance()
baisseBrosse()
leveBrosse()
gauche()
avance()
gauche()
	
faireV(c: Color.YELLOW)